force-app/main/default/objects/Employee_Skills__c/Employee_Skills__c.object-meta.xml
<CustomObject>
    <label>Employee Skills</label>
    <nameField>
        <displayFormat>EMPLOYEE SKILL-{000}</displayFormat>
        <label>Employee Skills ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>