force-app/main/default/objects/Employee_Skills__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Skills</relationshipLabel>
    <relationshipName>Employee_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>