force-app/main/default/objects/Employee_Skills__c/fields/Relevant_Experience_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Experience_in_Years__c</fullName>
    <label>Relevant Experience (in Years)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>