force-app/main/default/objects/Employee_Skills__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <referenceTo>Skills__c</referenceTo>
    <relationshipLabel>Employee Skills</relationshipLabel>
    <relationshipName>Employee_Skills</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>