force-app/main/default/objects/Employee_Skills__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Relevant_Experience_in_Years__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>